--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Marianavieira.GitHub.io</h1>
-        <h2></h2>
+        <h1>Mariana vieira</h1>
+        <!--
+<h2></h2>
         <a href="https://github.com/marianavieira" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
+-->
 
     <div id="content-wrapper">
       <div class="inner clearfix">
