--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Mariana vieira</h1>
         
 <h2></h2>
-        <a href="https://github.com/marianavieira" class="button"><small>Fisioterapia Pediátrica</a>
+        <a> <BIG>Fisioterapia Pediátrica</BIG> </a>
       </div>
     </header>
 
