--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Mariana vieira</h1>
         
-<h2></h2>
+<h2>Fisioterapia Pediátrica</h2>
         <a> <BIG>Fisioterapia Pediátrica</BIG> </a>
       </div>
     </header>
